gccida/c2/fixup_abnormal_edges
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_abnormal_edges/src/reload1.c:10009:15: error: use of undeclared identifier 'off_7088B8'
fancy_abort( &off_7088B8[4], 9527, "fixup_abnormal_edges"); 
              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_abnormal_edges/src/obj/reload1.o] Error 1
